<resources>
    <string name="app_name">FirstApp</string>
    <string name="textViewSqr">////////////////////////Квадрат\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\</string>
    <string name="btnAreaSqr">AREA</string>
    <string name="storonaSqr">Сторона квадрата :</string>
    <string name="Descriptoin"><![CDATA[Введите сторону квадрата -> Нажмите AREA]]></string>
    <string name="btnTriangle">Треугольник</string>
    <string name="btnSqear">Квадрат</string>
    <string name="btnCercl">Круг</string>
    <string name="textViewDiagon">Через диагонали.</string>
    <string name="textViewStorona">Через сторону.</string>
    <string name="textViewDescription2"><![CDATA[Введите длину диагонали -> Нажмите AREA]]></string>
    <string name="textView6">Диагональ квадрата :</string>
    <string name="btnAnswer2">AREA</string>
    <string name="TextViewDiagon">textViewDiag</string>
    <string name="TextViewStorona">TextViewStorona</string>
    <string name="TextViewDescription2">textDescription2</string>
    <string name="TextView6">textView6</string>
    <string name="btnArea">AREA</string>
    <string name="btnPerimeter">PERIMETER</string>
    <string name="textCercl">////////////////////////Круг\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\</string>
    <string name="textDecriptionCercl"><![CDATA[Введите радиус окружности -> Нажмите AREA]]></string>
    <string name="textAddRadius">Радиус :</string>
    <string name="btnAreaOfCercl">AREA</string>
    <string name="textTriangle">Треугольник</string>
    <string name="textDescriptionTriangle">Через основание и высоту.</string>
    <string name="textInstructionTriangle1"><![CDATA[Введите основание треугольника и его высоту -> Нажмите AREA]]></string>
    <string name="textViewTriangle1">Основание треугольника :</string>
    <string name="textHeightOfTriangle1">Высота треугольника :</string>
    <string name="btnAreaOfTriangle">AREA</string>
    <string name="btnRect">Прямоугольник</string>
    <string name="textViewRect1">Прямоугольник</string>
    <string name="textViewDecriptionRect1">Через две стороны.</string>
    <string name="textInstructionRect1"><![CDATA[Введите первую сторону  --> введите вторую сторону   --> нажмите AREA]]></string>
    <string name="textFerstSkladRect1">Первая сторона :</string>
    <string name="textSecondSkladRect1">Вторая сторона :</string>
    <string name="btnAreaRect1">AREA</string>
    <string name="textViewParallel">Параллелограмм</string>
    <string name="textDescripParallel_1">Через основание и высоту, проведенную к ней.</string>
    <string name="textInstructionParallel_1"><![CDATA[Введите основание параллелограмма -> Введите высоту параллелограмма -> Нажмите AREA]]></string>
    <string name="textOsnParallel_1">Основание параллелограмма :</string>
    <string name="textHeightParallel_1">Высота параллелограмма :</string>
    <string name="btnAreaOfParall_1">AREA</string>
    <string name="btnParallel">Параллелограмм</string>
</resources>
