<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.company.AreaOfSqear">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSqr"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/textViewSqr" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Descriptoin"
        android:id="@+id/textView"
        android:layout_below="@+id/answerArea"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storonaSqr"
        android:id="@+id/textView2"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAreaSqr"
        android:id="@+id/btnAreaOfSqr"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/writerForSqr"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/answerArea"
        android:layout_below="@+id/textViewSqr"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewDiagon"
        android:id="@+id/textView3"
        android:layout_below="@+id/writerForSqr"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewStorona"
        android:id="@+id/textView4"
        android:layout_below="@+id/answerArea"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/TextViewDescription2"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/TextView6"
        android:id="@+id/textView6"
        android:layout_above="@+id/writerForSqrSecond"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/writerForSqrSecond"
        android:inputType="numberDecimal"
        android:layout_below="@+id/btnAreaOfSqrTwo"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAnswer2"
        android:id="@+id/btnAreaOfSqrTwo"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/btnAreaOfSqr" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textAnswer"
        android:layout_above="@+id/textView6"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
