<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.company.AreaOfRectangleActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textViewRect1"
        android:id="@+id/textViewRect"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textViewDecriptionRect1"
        android:id="@+id/textViewDecriptionRect1"
        android:layout_below="@+id/textViewRect"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textInstructionRect1"
        android:id="@+id/textViewInstructionRect1"
        android:layout_below="@+id/textViewDecriptionRect1"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textAnswerRect1"
        android:layout_below="@+id/textViewInstructionRect1"
        android:layout_alignEnd="@+id/textViewRect"
        android:layout_toEndOf="@+id/textViewDecriptionRect1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textFerstSkladRect1"
        android:id="@+id/textFerstSkladRect1"
        android:layout_below="@+id/textAnswerRect1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/writerSklad1Rect1"
        android:inputType="numberDecimal"
        android:layout_below="@+id/textFerstSkladRect1"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textSecondSkladRect1"
        android:id="@+id/textSecondSkladRect1"
        android:layout_below="@+id/writerSklad1Rect1"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/writerForSklad2Rect1"
        android:inputType="numberDecimal"
        android:layout_below="@+id/textSecondSkladRect1"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAreaRect1"
        android:id="@+id/btnAnswerRect1"
        android:layout_above="@+id/writerSklad1Rect1"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
